Fixed spacing

--- a/static/css/crustfungi.css
+++ b/static/css/crustfungi.css
@@ -1108,7 +1108,6 @@ footer {
   display: grid;
   grid-template-columns: 300px 1fr;
   gap: 30px;
-  max-width: 1300px;
   margin: 30px auto;
 }
 
